delete mars form and fix mars background on safari

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -44,6 +44,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
+  background-size: cover;
 }
 
 @media screen and (max-width: 720px) {
